--- a/src/scss/shapes.scss
+++ b/src/scss/shapes.scss
@@ -14,7 +14,6 @@
 @import 'functions/tan';
 @import 'functions/rotate';
 @import 'functions/rotate-path';
-@import 'functions/rotate-shapes';
 
 // Mixins
 @import 'mixins/vendor-prefix';
@@ -22,55 +21,57 @@
 // Variables
 @import './_variables';
 
-// $rotated-shapes: ();
-// @each $name, $value in $shapes {
-//   @if str-contains($value, ('polygon')...) {
-//     @each $deg in $rotate-steps {
-//       $unitless: $deg / ($deg * 0 + 1);
-//       $rotated-path: rotate-path($value, $deg, $rotate-origin);
-//       $rotated-shapes: map-merge((
-//         '#{$name}-rotate-#{$unitless}': $rotated-path
-//       ), $rotated-shapes);
-//     }
-//   }
-// }
-
-$shapes: map-merge($shapes, rotate-shapes($shapes, $shape-rotate-steps, $shape-rotate-origin));
-
 /* Properties */
 :root {
-  /* Shapes */
+
+  /* Rotated Shapes */
+  $rotated-shapes: ();
+  @each $name, $value in $shapes {
+    @if str-contains($value, ('polygon')...) {
+      @each $deg in $shape-rotate-steps {
+        $unitless: $deg / ($deg * 0 + 1);
+        $rotated-path: rotate-path($value, $deg, $shape-rotate-origin);
+        $rotated-shapes: map-merge((
+          '#{$name}-rotate-#{$unitless}': $rotated-path
+        ), $rotated-shapes);
+      }
+    }
+  }
+  $shapes: map-merge($shapes, $rotated-shapes);
+
+  /* CSS Properties */
   @each $name, $value in $shapes {
     --shape-#{$name}: #{$value};
   }
 
-  /* Shape spacers */
-  @each $name, $value in $shape-spacers {
-    --shape-spacer-#{$name}: #{$value};
-  }
-}
+  /* Shape Spacers */
+  // @each $name, $value in $shape-spacers {
+  //   --shape-spacer-#{$name}: #{$value};
+  // }
 
-/* Clips */
-@each $name, $value in $shapes {
-  .clip-#{$name} {
-    @include vendor-prefix(clip-path, var(--shape-#{$name}));
+  /* Clips */
+  @each $name, $value in $shapes {
+    .clip-#{$name} {
+      @include vendor-prefix(clip-path, var(--shape-#{$name}));
+    }
   }
-}
 
-/* Shapes */
-@each $name, $value in $shapes {
-  .shape-outside-#{$name} {
-    @include vendor-prefix(shape-outside, var(--shape-#{$name}));
+  /* Shape Outside */
+  @each $name, $value in $shapes {
+    .shape-outside-#{$name} {
+      @include vendor-prefix(shape-outside, var(--shape-#{$name}));
+    }
   }
-}
 
-@each $name, $value in $shape-spacers {
-  .shape-margin-#{$name} {
-    @include vendor-prefix(shape-margin, var(--shape-spacer-#{$name}));
-  }
-}
+  /* Shape Margins */
+  // @each $name, $value in $shape-spacers {
+  //   .shape-margin-#{$name} {
+  //     @include vendor-prefix(shape-margin, var(--shape-spacer-#{$name}));
+  //   }
+  // }
 
-/* Masks */
-.mask {
-  @include vendor-prefix(mask-image, linear-gradient(rgba(0, 0, 0, 1.0), transparent));
+  /* Masks */
+  // .mask {
+  //   @include vendor-prefix(mask-image, linear-gradient(rgba(0, 0, 0, 1.0), transparent));
+  // }
 }
