Fix name conflict

--- a/src/scss/functions/path-rotate.scss
+++ b/src/scss/functions/path-rotate.scss
@@ -1,4 +1,4 @@
-@function rotate-path($path, $angle: 0, $origin: (50%, 50%)) {
+@function path-rotate($path, $angle: 0, $origin: (50%, 50%)) {
   $points: ();
   $func-name: str-trim(str-slice($path, 0, str-index($path, '(') - 1));
   $func-value: str-slice($path, str-index($path, '(') + 1, str-index($path, ')') - 1);
@@ -14,7 +14,7 @@
     }
     $rotated_points: ();
     @each $point in $points {
-      $rotated-point: rotate(nth($point, 1), nth($point, 2), $angle, $origin);
+      $rotated-point: point-rotate(nth($point, 1), nth($point, 2), $angle, $origin);
       $x: nth($rotated-point, 1);
       $y: nth($rotated-point, 2);
       $rotated_points: append($rotated_points, #{$x $y}, comma);
